fix some bolt-text alignment on homepage on big tablets and make loading screen respond to dark mode

--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -43,6 +43,19 @@
   overflow-y: hidden;
 }
 
+
 #loading-screen {
   background: white;
+}
+
+@media (prefers-color-scheme: dark) {
+  #loading-screen {
+    background: #222;
+  }
+}
+
+@media only screen and (max-width: 1025px) {
+  #greeting-section {
+    justify-content: flex-end;
+  }
 }
